--- a/src/features/place/_place.html
+++ b/src/features/place/_place.html
@@ -2,7 +2,7 @@
     <div class="module">
         <h2>{{title}}</h2>
         <p>{{place.copy}}</p>
-        <a class="module__link" href="http://google.com" target="_blank">See the website</a>
+        <a ng-if="place.url" class="module__link" ng-href="{{place.url}" target="_blank">See the website</a>
     </div>
     <div class="module" ng-repeat="img in place.gallery" style="background-image: url('{{img}}');"></div>
 </div>
