--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <base href="/" >
+        <base href="/flytoaustin" >
 
         <title ng-bind=""></title>
         <meta name="description" content="">
