--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <meta name="author" content="">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width">
 
-        <link rel="stylesheet" href="/build/normalize.css" />
-        <link rel="stylesheet" href="/build/style.css" />
+        <link rel="stylesheet" href="build/normalize.css" />
+        <link rel="stylesheet" href="build/style.css" />
 
-        <script type="application/javascript" src="/build/script.js"></script>
+        <script type="application/javascript" src="build/script.js"></script>
 
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
