--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <base href="samtgarson.github.io/flytoaustin/" >
+        <base href="/" >
 
         <title ng-bind=""></title>
         <meta name="description" content="">
